--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250120214946">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,11 +14,6 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header">
-			<div class="header__container">
-
-			</div>
-		</header>
 		<main class="page">
 			<section class="counter-content">
 				<div class="counter counter__image counter__container"></div>
@@ -35,25 +30,8 @@
 				<div class="item"><img src="#" class="item__image" alt="#"></div>
 			</template>
 		</main>
-		<footer class="footer">
-			<div class="footer__container">
-
-			</div>
-		</footer>
 	</div>
-	<!-- 
-<div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрыть</button>
-			<div class="popup__text">
-			</div>
-		</div>
-	</div>
-</div>
- -->
-
-	<script src="js/app.min.js?_v=20250120214946"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
