--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="shelf"></div>
 			</template>
 			<template id="template-product">
-				<div class="item"><img src="#" class="item__image" alt="#"/></div>
+				<div class="item"><img src="#" class="item__image" alt="#"></div>
 			</template>
 		</main>
 	</div>
